2007-10-30  Philip Van Hoof  <pvanhoof@gnome.org>

	* Improvements to the AUTHORS file. Authors can obviously notify
	me if they want their description improven or removed.
	* Using the SSL negotiated timeout time for IDLE's recycle
	
2007-10-29  Jose Dapena Paz  <jdapena@igalia.com>

	* Fix: now we don't unset the priority flag on setting or
	  unsetting other flags.

2007-10-27  Philip Van Hoof  <pvanhoof@gnome.org>

	* Introduction of tny_gtk_msg_window_set_view

	* This was a minor API change

2007-10-26  Alberto Garcia Gonzalez <agarcia@igalia.com>

	* Parse the X-Priority flag correctly, and allow values of 2 and 4

2007-10-26  Philip Van Hoof  <pvanhoof@gnome.org>

	* X-Priority flag writing fixed

2007-10-25  Philip Van Hoof  <pvanhoof@gnome.org>

	* Corrections for the priority flags
	* Memory leak fix in CamelImapCommand, found by Dirk-Jan
	* Freeing of recursive locks, especially the ones that we allocated
	ourselves

	* This was a major API change

2007-10-24  Philip Van Hoof  <pvanhoof@gnome.org>

	* Improvements for the IDLE support. The Nonblocking read is now
	actually used correctly, various racy situations should be fixed now
	and instant event throwing is put in place (during IDLE state).
	* Removed the (*read_idle) funcptr from CamelTcpStream, as this is no longer
	required. This to reduce the complexity of the IDLE patch so that we
	can later, perhaps, more easily bring this feature to upstream Camel.
	* Updating unread and total count if necessary (due to IDLE events)
	* Fixed the normal-priority flag ni Maildir

2007-10-23  Philip Van Hoof  <pvanhoof@gnome.org>

	* Reference count problem in TnyCamelHeader
	* priv->folder_name in TnyCamelFolder sometimes is NULL, which
	doesn't seem right (and is racy).

2007-10-19  Philip Van Hoof  <pvanhoof@gnome.org>

	* Avoiding the second capability request, eliminating roundtrips when
	connecting. If LOGIN returns a capability response, we assume this one