@@ -2,7 +2,8 @@
 
 	* Improvements to the AUTHORS file. Authors can obviously notify
 	me if they want their description improven or removed.
-	* Using the SSL negotiated timeout time for IDLE's recycle
+	* Using the SSL negotiated timeout time for IDLE's recycle (undone)
+	* Undone last timeout change, set it to 27 minutes fixed for IMAP
 	
 2007-10-29  Jose Dapena Paz  <jdapena@igalia.com>
 
